# Lour

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py
app/agents/: checkpointing.py  deps.py  events.py  state.py  stream.py
app/agents/enforcement/: budget.py
app/agents/graphs/: _common.py  builder.py  coder.py  researcher.py  supervisor.py
app/agents/nodes/: act.py  memory_recall.py  memory_write.py  plan.py  reflect.py  route.py
app/agents/prompts/: __init__.py  coder.j2  reflection.j2  researcher.j2  supervisor.j2
app/core/: config.py  di.py  exceptions.py  logging.py  metrics.py  policy.py  security.py  telemetry.py  types.py
app/gateway/: security.py  streaming.py
app/gateway/middleware/: auth.py  error_handler.py  logging.py  rate_limit.py  request_id.py
app/gateway/routes/: admin.py  chat.py  health.py  rag.py  sessions.py  skills.py  tools.py
app/infra/clients/: ollama.py  postgres.py  qdrant.py  redis.py  reranker.py  telemetry.py
app/infra/db/: base.py  unit_of_work.py
app/infra/db/models/: document.py  episodic.py  session.py
app/infra/db/repositories/: base.py  document_repo.py  episodic_repo.py  session_repo.py
app/schemas/: agent.py  rag.py  skills.py
app/services/embeddings/: base.py  bge_m3.py  cache.py  sparse.py
app/services/llm/: base.py  cloud_provider.py  factory.py  ollama_provider.py  structured.py
app/services/memory/: __init__.py  base.py  consolidation.py  episodic.py  long_term.py  scoring.py  short_term.py
app/services/rag/: chunking.py  ingestion.py  query_transform.py  retrieval.py
app/services/rag/loaders/: __init__.py  base.py  code.py  markdown.py  pdf.py  url.py
app/services/reranker/: base.py  local_mps.py
app/services/sandbox/: __init__.py  base.py  docker_sandbox.py
app/skills/: __init__.py  base.py  registry.py  router.py
app/skills/definitions/: answer_from_kb.yaml  research_topic.yaml  review_code.yaml  summarize_document.yaml
app/skills/implementations/: __init__.py  review_code.py
app/tools/: __init__.py  base.py  cache.py  decorators.py  gate.py  registry.py  schema.py
app/tools/builtins/: __init__.py  code_exec.py  datetime_tool.py  filesystem.py  http_request.py  rag_query.py  web_fetch.py  web_search.py
app/tools/mcp/: __init__.py  adapter.py  client.py  server.py
docker/: Dockerfile  docker-compose.gpu-linux.yml  docker-compose.yml
docker/init/postgres/: init.sql
docker/init/qdrant/: bootstrap.py  memory_collection.py
docs/: architecture.md  extending.md  phase-2-rag-baseline.md
docs/adr/: 0001-tech-stack.md  0002-provider-agnostic-llm.md  0003-supervisor-pattern.md  0004-skills-vs-tools.md  0005-custom-memory-layer.md  0006-mcp-bidirectional.md  0007-native-function-calling.md  0008-postgres-checkpointer.md  0009-repository-unit-of-work.md  0010-deployment-topology.md  0011-unified-policy.md  0012-apscheduler-consolidation.md
docs/diagrams/: agent_flow.mmd  system.mmd
migrations/: env.py
migrations/versions/: adac8c5072b0_episodic_events_table.py  b7a677ed9f08_init_sessions_and_messages.py  e58288f41ec2_documents_and_chunks.py
scripts/: demo.py  eval_run.py  pull_models.sh  seed_rag.py
scripts/data/rag_corpus/: history_notes.txt  ml_basics.md  networking.txt  rag_overview.md  sorting.py  systems.md
tests/eval/agents/: benchmark.py
tests/eval/datasets/: __init__.py  agent_tasks.jsonl  rag_qa.jsonl  skill_routing.jsonl
tests/eval/rag/: ragas_suite.py
tests/eval/skills/: router_eval.py
tests/integration/: test_auth.py  test_checkpoint_resume.py  test_consolidation.py  test_llm_ollama.py  test_memory_recall.py  test_rag_api.py  test_sandbox_escape.py  test_security_headers.py  test_tool_gate.py  test_tools_api.py
tests/unit/: test_agent_core.py  test_agent_graph.py  test_chunking.py  test_gateway_hardening.py  test_loaders.py  test_memory_scoring.py  test_metrics.py  test_query_transform.py  test_security.py  test_skills.py  test_tools.py
ui/: streamlit_app.py
