[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "ai-agent"
version = "0.1.0"
description = "Lour – multi-agent system"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",

    # Config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Logging
    "structlog>=24.4.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Cache
    "redis[hiredis]>=5.2.0",

    # Vector store
    "qdrant-client[fastembed]>=1.12.0",

    # LLM
    "instructor>=1.7.0",
    "anthropic>=0.40.0",
    "openai>=1.55.0",

    # LangGraph (orchestration — Phase 5, but declared early)
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",

    # Observability
    "langfuse>=2.55.0",
    "opentelemetry-api>=1.28.0",

    # Utilities
    "tenacity>=9.0.0",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",  # AsyncClient for tests
    "testcontainers[postgres,redis]>=4.8.0",
    "factory-boy>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres,redis]>=4.8.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    # mypy stubs
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
]


# Ruff — lint + format (replaces black + isort + flake8)

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # bugbear
    "C4",        # comprehensions
    "SIM",       # simplify
    "TCH",       # type-checking imports
    "RUF",       # ruff-specific
    "ANN",       # annotations (subset)
]
ignore = [
    "ANN401",  # Any allowed in some utility places
    "B008",    # FastAPI Depends() calls in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]
"migrations/**" = ["ANN", "N999"]
# Starlette middleware signatures require runtime presence of Request/Response/ASGIApp
"app/gateway/middleware/**" = ["TC001", "TC002"]
# FastAPI route handlers require runtime Request; health.py also does inline import
"app/gateway/routes/**" = ["TC002", "PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# Mypy — strict

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langfuse.*",
    "qdrant_client.*",
    "fastembed.*",
    "langgraph.*",
    "instructor.*",
    "slowapi.*",
    "testcontainers.*",
]
ignore_missing_imports = true


# Pytest

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "unit: pure unit tests, no I/O",
    "integration: require running backing services",
    "eval: evaluation / benchmark suites",
]